feat: Implementado créditos na tela principal

--- a/index.html
+++ b/index.html
@@ -41,10 +41,28 @@ if ('serviceWorker' in navigator) {
     <!-- Header -->
     <header class="header">
         <div class="header-content">
+            <div class="header-separacao">
             <div class="logo">
                 <i class="fas fa-pizza-slice"></i>
                 <span>PIZZARIA TORTILHÃO</span>
             </div>
+            <p class="mobile-version">
+  Projeto desenvolvido por 
+  <strong>
+    <a href="https://github.com/dieldev" target="_blank"
+       style="display:inline-block;
+              font-weight:bold;
+              background:linear-gradient(90deg, white 0%, rgb(87,216,255) 50%, white 100%);
+              background-size:200% auto;
+              -webkit-background-clip:text;
+              -webkit-text-fill-color:transparent;
+              animation:brilhoAnimado 3s linear infinite;">
+      Diel Oliveira
+    </a>
+  </strong> 
+  (Desenvolvedor de Software Fullstack)
+</p>
+</div>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
